kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-html-service
  namespace: default 
  labels:
    app: simple-html-app
spec:
  selector:
    app: simple-html-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
